--- a/Shared_mem_concurrent_connection_oriented_Server/Makefile
+++ b/Shared_mem_concurrent_connection_oriented_Server/Makefile
@@ -1,4 +1,6 @@
-all:Remote_Access_Server_Shared.c Remote_Access_Server_Shared.h Shared_mem_concurrent_connection_oriented_Server_main.c Shared_mem_concurrent_connection_oriented_Server_main.h 
+all:Shared_mem_concurrent_connection_oriented_Server
+Shared_mem_concurrent_connection_oriented_Server:Remote_Access_Server_Shared.c Remote_Access_Server_Shared.h Shared_mem_concurrent_connection_oriented_Server_main.c Shared_mem_concurrent_connection_oriented_Server_main.h 
 	gcc Remote_Access_Server_Shared.c Shared_mem_concurrent_connection_oriented_Server_main.c -o Shared_mem_concurrent_connection_oriented_Server -Wall -g
+.PHONY : clean
 clean:
 	rm Shared_mem_concurrent_connection_oriented_Server
